# ProgNHZ

./: CMakeLists.txt  armor.c  armor.h  character.c  character.h  consumable.c  consumable.h  debugmalloc.h  encounter.c  encounter.h  enemies.c  enemies.h  game.c  game.h  gameProperties.h  inventory.c  inventory.h  io.c  io.h  location.c  location.h  main.c  player.c  player.h  todos.md
